tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_as_trait_path_syntax_no_impl/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: No matching impl found for `Bar: Foo<Assoc = i8>`
   ┌─ src/main.nr:13:35
   │
13 │         let _: i64 = 1 as <Bar as Foo<Assoc = i8>>::Assoc;
   │                                   --- No impl for `Bar: Foo<Assoc = i8>`
   │

Aborting due to 1 previous error
